prevent flickering of top navbar in chrome

--- a/src/main/resources/static/css/frontend.css
+++ b/src/main/resources/static/css/frontend.css
@@ -17,7 +17,8 @@ body {
     text-align: left;
 }
 
-.navbar-custom {
+.navbar {
+    padding: 0;
     min-height: 4rem;
     box-shadow: 0 1rem 1rem rgba(0,0,0,.05), inset 0 -1px 0 rgba(0,0,0,.1);
 }
